This is the frontend changes for font and colors

--- a/WebContent/footer.html
+++ b/WebContent/footer.html
@@ -27,19 +27,18 @@
 				<div class="col-md-4">
 					<p>Fan? Drop a note.</p>
 					<p>
-						<span class="glyphicon glyphicon-map-marker"></span>Bitter Code
+						<span class="glyphicon glyphicon-map-marker"></span>TEAM_MA#5
 					</p>
 					<p>
-						<span class="glyphicon glyphicon-phone"></span>Phone: +91
-						1515151515
+						<span class="glyphicon glyphicon-phone"></span>Phone:
 					</p>
 					<p>
 						<span class="glyphicon glyphicon-envelope"></span>Email:
-						thebittercode@gmail.com
+						admin@gmail.com
 					</p>
 					<p>
 						<span class="glyphicon glyphicon-copyright-mark"></span>
-						BitterCode - 2023
+						TEAM_MA#5 - 2023
 					</p>
 				</div>
 				<div class="col-md-8">
